[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dasm"
version = "0.1.1"
description = "AI-powered disassembler / 基于AI的逆向反汇编工具"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/yanmingsohu/ai-dasm"